Updated package name and fixed logo

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "one.block.asaptestapp"
+        applicationId "one.block.androidexampleapp"
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
