--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,10 +62,10 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'one.block:eosiojava:0.1.0'
+    implementation 'one.block:eosiojava:0.1.3-eosio2.1'
     implementation 'one.block:eosiojavasoftkeysignatureprovider:0.1.1'
-    implementation 'one.block:eosiojavaandroidabieosserializationprovider:0.1.0'
-    implementation 'one.block:eosiojavarpcprovider:0.1.1'
+    implementation 'one.block:eosiojavaandroidabieosserializationprovider:0.1.3-eosio2.1'
+    implementation 'one.block:eosio-java-rpc-provider:0.1.3-eosio2.1'
 
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
