--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,13 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            credentials{
+                username artifactory_username
+                password artifactory_password
+            }
+            url artifactory_path_android_libraries
+        }
     }
 }
 
