--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
-        versionName "0.1"
+        versionName "1.0.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -62,11 +62,14 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'one.block:eosiojava:0.1.3-eosio2.1'
-    implementation 'one.block:eosiojavasoftkeysignatureprovider:0.1.1'
-    implementation 'one.block:eosiojavaandroidabieosserializationprovider:0.1.3-eosio2.1'
-    implementation 'one.block:eosio-java-rpc-provider:0.1.3-eosio2.1'
+    implementation 'one.block:eosiojava:1.0.0'
+    implementation 'one.block:eosiojavasoftkeysignatureprovider:1.0.0'
+    implementation 'one.block:eosiojavaandroidabieosserializationprovider:1.0.0'
+    implementation 'one.block:eosio-java-rpc-provider:1.0.0'
 
+    implementation (group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1') {
+        exclude group: 'org.hamcrest', module: 'hamcrest-core'
+    }
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
