Remove values from eosio.properties values

--- a/eosio.properties
+++ b/eosio.properties
@@ -1,9 +1,7 @@
-node_url=http://10.0.0.112:8888
-#node_url=https://8888-c5c7d5cc-9352-41d1-9a37-c5a719f4090b.ws-us02.gitpod.io
-from_account=bob
-to_account=alice
-from_account_private_key=5JuH9fCXmU3xbj8nRmhPZaVrxxXrdPaRmZLW1cznNTmTQR2Kg5Z
-# from_account_private_key=5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3
-amount=1.1234 SYS
-memo=hello
-private_keys=["5JuH9fCXmU3xbj8nRmhPZaVrxxXrdPaRmZLW1cznNTmTQR2Kg5Z"]
+node_url=
+from_account=
+to_account=
+from_account_private_key=
+amount=
+memo=
+private_keys=
