--- a/eosio.properties
+++ b/eosio.properties
@@ -1,7 +1,7 @@
 node_url=
-from_account=
-to_account=
-from_account_private_key=
-amount=
-memo=
-private_keys=
+from_account =
+to_account =
+from_account_private_key =
+amount =
+memo =
+private_keys=[]
